--- a/index.html
+++ b/index.html
@@ -43,25 +43,25 @@
          <section>
          <h2>What are we doing</h2>
          <ul>
-             <li><img src="./img/img 1.jpg" alt="img1" width="370" </li>
-             <li><img src="./img/img 2.jpg" alt="img2" width="370" </li>
-             <li><img src="./img/img 3.jpg" alt="img3" width="370" </li>
+             <li><img src="./img/img 1.jpg" alt="img1" width="370"> </li>
+             <li><img src="./img/img 2.jpg" alt="img2" width="370"> </li>
+             <li><img src="./img/img 3.jpg" alt="img3" width="370"> </li>
          </ul>    
            </section>
            <!--our team-->
            <section>
                <h2>Наша команда</h2>
                <ul>
-                    <li><img src="./img/img 4.jpg" alt="img4" width="270"
+                    <li><img src="./img/img 4.jpg" alt="img4" width="270">
                  <h4>Игорь Демьяненко</h4>
                 <p>Product Designer</p></li>
-                    <li><img src="./img/img 5.jpg" alt="img5" width="270"
+                    <li><img src="./img/img 5.jpg" alt="img5" width="270">
                  <h4>Ольга Репина</h4>
                 <p>Frontend Developer</p></li>
-                    <li><img src="./img/img 6.jpg" alt="img6" width="270"
+                    <li><img src="./img/img 6.jpg" alt="img6" width="270">
                  <h4>Николай Тарасов</h4>
                 <p>Marketing</p></li>
-                    <li><img src="./img/img 7.jpg" alt="img7" width="270"
+                    <li><img src="./img/img 7.jpg" alt="img7" width="270">
                  <h4>Михаил Ермаков</h4>
                 <p>UI Designer</p> </li>
                </ul>
